syntax = "proto3";
import "commontype/QoS.proto";

package commontype;

option java_multiple_files = true;
option java_package = "com.zachary.bifromq.type";
option java_outer_classname = "SubInfoProtos";

/**
订阅者信息
 */
message SubInfo {
  // 订阅者的 租户ID
  string tenantId = 1;
  string inboxId = 2;
  // 订阅者的 QOS
  QoS subQoS = 3;
  // Topic 过滤
  string topicFilter = 4;
}
